@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header $
+# $Header: $
 
 inherit eutils
 
@@ -11,7 +11,7 @@ SRC_URI="mirror://sourceforge/conky/${P}.tar.bz2"
 LICENSE="BSD"
 SLOT="0"
 KEYWORDS="~alpha ~amd64 ~ppc ~ppc64 ~sparc ~x86"
-IUSE="truetype X ipv6 audacious bmpx hddtemp mpd"
+IUSE="truetype X ipv6 audacious bmpx hddtemp mpd vim-syntax"
 
 DEPEND_COMMON="
 	virtual/libc
@@ -49,6 +49,8 @@ DEPEND="
 	)
 	sys-apps/grep
 	sys-apps/sed"
+
+PDEPEND="vim-syntax? ( app-vim/conky-syntax )"
 
 src_compile() {
 	local mymake
