@@ -1,5 +1,5 @@
 # SVN ebuild for Conky, thanks to Hopeless; Subversion ver. by drphibes
-# $Header$
+# $Header: $
 
 ESVN_REPO_URI="https://svn.sourceforge.net/svnroot/conky/trunk/conky1"
 ESVN_PROJECT="conky1"
@@ -11,7 +11,7 @@ HOMEPAGE="http://conky.sf.net"
 LICENSE="BSD"
 SLOT="0"
 KEYWORDS="~alpha ~amd64 ~ppc ~ppc64 ~sparc ~x86"
-IUSE="truetype X ipv6 audacious bmpx hddtemp mpd"
+IUSE="truetype X ipv6 audacious bmpx hddtemp mpd vim-syntax"
 
 DEPEND_COMMON="
 	virtual/libc
@@ -49,6 +49,8 @@ DEPEND="
 	)
 	sys-apps/grep
 	sys-apps/sed"
+
+PDEPEND="vim-syntax? ( app-vim/conky-syntax )"
 
 S=${WORKDIR}/conky
 
@@ -102,4 +104,3 @@ pkg_postinst() {
 	einfo "syntax highlighting in Vim"
 	einfo
 }
-
